@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-02T00:50:46Z",
-  "count_outdated" : 1038,
-  "uniques_outdated" : 644,
-  "count" : 1055,
-  "uniques" : 661,
+  "timestamp" : "2025-10-03T00:50:45Z",
+  "count_outdated" : 1040,
+  "uniques_outdated" : 646,
+  "count" : 1057,
+  "uniques" : 663,
   "clones" : [
-    {
-      "timestamp": "2025-09-18T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-09-19T00:00:00Z",
       "count": 1,
@@ -121,6 +112,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-02T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
