@@ -3,11 +3,6 @@
   "uniques": 6,
   "clones": [
     {
-      "timestamp": "2025-09-18T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
       "timestamp": "2025-09-19T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -66,6 +61,11 @@
       "timestamp": "2025-10-01T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-02T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
