@@ -1,3 +1,12 @@
+2025-10-03T00:50:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18209619221 # 785
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-03
+* notice: last 14d: unq all: 6 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 644 1038 / 661 1055
+* notice: next accum: outdated-unq outdated-all / unq all: 646 1040 / 663 1057
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2025-09-18] / [2025-10-02]
+
 2025-10-02T00:50:46Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18179935746 # 784
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-02
